[~] MainActivity Now Loads ColorSelectorActivity as Child
+ Button that shows selected color for file, onclick loads color selection activity
~ Manifest editing of colorselector activity to have mainactivity as parent for automatic "Up Navigation"
~ Broken color selector class code for implementing up navigation from google examples, not needed

[jspann]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <!-- action android:name="android.intent.action.ACTION_REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/ -->
             </intent-filter>
         </activity>
-        <activity android:name=".ColorSelectorActivity"></activity>
+        <activity android:name=".ColorSelectorActivity" android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
