[+] Basic Phone Activity Reciever Class
@ TO MAKE A PHONE EVENT LISTENER (RECEIVER) DO THE FOLLOWING:
 * Create class that extends BroadcastReceiver
 * Override new class onReceive
 * Access phone state (ringing, idle, offhook, etc) via TelephonyManager.MY_CONSTANT_LOOKING_UP
 * Use the p_intent.getExtras().getString(TelephonyManager.EXTRA_STATE) for comparisons to divide code by phone-state logic
 * Give requisite READ_PHONE_STATE and PROCESS_OUTGOING_CALLS uses-permission in manifest.xml
 * At the same level as <activity/> create a new receiver tag with android:name to lookup your class made earlier by ".MyClass"
 * Inside your reciever tag, insert <intent-filter/> with <action/>s with the actions names as "android.intent.action.PHONE_STATE" and "android.intent.action.NEW_OUTGOING_CALL"
@ END SECTION

+ Reciever and permission updates to manifest
~ Commented out all mentioned code within MainActivity
+ PhoneStateReceiverKT (class CallReceiver) thatks to https://www.studytutorial.in/android-phonestatelistener-phone-call-broadcast-receiver-tutorial
+ Basic console logging of ringing/incoming calls to journal-like timestamp syntax

[jspann]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".ColorSelectorActivity" android:parentActivityName=".MainActivity"></activity>
+        <receiver android:name=".CallReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
