[+] Basic Settings/Prefences Activity
+ Base Studio implementation of preferences and settings activity
+ MenuItem function to load settings panel
+ Some real items to dummy settings samples

[jspann]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <!-- uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/ -->
     <application
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:windowSoftInputMode="adjustResize">
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,8 +24,11 @@
                 <!-- action android:name="android.intent.action.ACTION_REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/ -->
             </intent-filter>
         </activity>
-        <activity android:name=".ColorSelectorActivity" android:parentActivityName=".MainActivity"></activity>
-        <receiver android:name=".CallReceiver" >
+        <activity
+            android:name=".ColorSelectorActivity"
+            android:parentActivityName=".MainActivity" />
+
+        <receiver android:name=".CallReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
@@ -31,6 +36,10 @@
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
