[v2.8.1] Colorization of File Selections
+ More file tag colors on ColorSelector activity
+ setSpinnerItems() gets file's color and sets item to that color
~ setSpinnerItems() uses SpannableString list instead of String list
+ New utils fn() that gets the data value from "YYYmmdd"
~ All references to legacy name "textfilewriter" are now "dailydroid"
+ setSpinnerItems() called when clicking on title before spinner.click
+ Build updates & new key to sign files

[jspann]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.jspann.textfilewriter"
+        applicationId "com.example.jspann.dailydroid"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 2
-        versionName "2.7.2"
+        versionName "2.8.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
