--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 19 08:31:52 CST 2018
-ndk.dir=C\:\\Users\\jspann\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+#Sun Apr 28 22:23:40 CDT 2019
 sdk.dir=C\:\\Users\\jspann\\AppData\\Local\\Android\\Sdk
